--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
+before_deploy:
+  - "mvn -DskipTests package"
+  - export JARPATH=$(ls target/CalculatorForIntegers-1.0.-SNAPSHOT.jar)
 deploy:
   provider: releases
   api_key: ${api_key}
-  file: "CalculatorForIntegers-1.0.-SNAPSHOT.jar"
+  file: "${JARPATH}"
