--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
-before_deploy:
-  echo ${TRAVIS_BUILD_DIR}
 deploy:
   provider: releases
   api_key: ${api_key}
   file: target/CalculatorForIntegers-1.0-SNAPSHOT.jar
   skip_cleanup: true
+  on:
+    tags: true
